// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocalizedInput rendering with pre-existing value has dropdown with options 1`] = `
<DocumentFragment>
  <div
    class="input-group input-localized input-localized-input"
  >
    <div
      class="dropdown postion-relative lfr-icon-menu open"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="btn btn-monospaced btn-secondary dropdown-toggle"
        data-testid="localized-dropdown-button"
        role="button"
        title=""
        type="button"
      >
        <span
          class="inline-item"
        >
          <svg
            class="lexicon-icon lexicon-icon-en-us"
            role="presentation"
          >
            <use
              xlink:href="#en-us"
            />
          </svg>
        </span>
        <span
          class="btn-section"
        >
          en-US
        </span>
      </button>
      <ul
        class="d-block dropdown-menu"
        role="menu"
      >
        <li
          role="presentation"
        >
          <span
            class="dropdown-item lfr-icon-item palette-item taglib-icon"
            role="menuitem"
            tabindex="0"
            target="_self"
          >
            <span
              class="inline-item inline-item-before"
            >
              <svg
                class="lexicon-icon lexicon-icon-ar-sa"
                role="presentation"
              >
                <use
                  xlink:href="#ar-sa"
                />
              </svg>
            </span>
            <span
              class="taglib-text-icon"
            >
              ar-SA
              <span
                class="label label-warning ml-1"
              >
                not-translated
              </span>
            </span>
          </span>
        </li>
        <li
          role="presentation"
        >
          <span
            class="dropdown-item lfr-icon-item palette-item taglib-icon"
            role="menuitem"
            tabindex="0"
            target="_self"
          >
            <span
              class="inline-item inline-item-before"
            >
              <svg
                class="lexicon-icon lexicon-icon-ca-es"
                role="presentation"
              >
                <use
                  xlink:href="#ca-es"
                />
              </svg>
            </span>
            <span
              class="taglib-text-icon"
            >
              ca-ES
              <span
                class="label label-warning ml-1"
              >
                not-translated
              </span>
            </span>
          </span>
        </li>
        <li
          role="presentation"
        >
          <span
            class="dropdown-item lfr-icon-item palette-item taglib-icon"
            role="menuitem"
            tabindex="0"
            target="_self"
          >
            <span
              class="inline-item inline-item-before"
            >
              <svg
                class="lexicon-icon lexicon-icon-de-de"
                role="presentation"
              >
                <use
                  xlink:href="#de-de"
                />
              </svg>
            </span>
            <span
              class="taglib-text-icon"
            >
              de-DE
              <span
                class="label label-warning ml-1"
              >
                not-translated
              </span>
            </span>
          </span>
        </li>
        <li
          role="presentation"
        >
          <span
            class="dropdown-item lfr-icon-item palette-item taglib-icon"
            role="menuitem"
            tabindex="0"
            target="_self"
          >
            <span
              class="inline-item inline-item-before"
            >
              <svg
                class="lexicon-icon lexicon-icon-en-us"
                role="presentation"
              >
                <use
                  xlink:href="#en-us"
                />
              </svg>
            </span>
            <span
              class="taglib-text-icon"
            >
              en-US
              <span
                class="label label-info ml-1"
              >
                default
              </span>
            </span>
          </span>
        </li>
        <li
          role="presentation"
        >
          <span
            class="dropdown-item lfr-icon-item palette-item taglib-icon"
            role="menuitem"
            tabindex="0"
            target="_self"
          >
            <span
              class="inline-item inline-item-before"
            >
              <svg
                class="lexicon-icon lexicon-icon-es-es"
                role="presentation"
              >
                <use
                  xlink:href="#es-es"
                />
              </svg>
            </span>
            <span
              class="taglib-text-icon"
            >
              es-ES
              <span
                class="label label-success ml-1"
              >
                translated
              </span>
            </span>
          </span>
        </li>
        <li
          role="presentation"
        >
          <span
            class="dropdown-item lfr-icon-item palette-item taglib-icon"
            role="menuitem"
            tabindex="0"
            target="_self"
          >
            <span
              class="inline-item inline-item-before"
            >
              <svg
                class="lexicon-icon lexicon-icon-fi-fi"
                role="presentation"
              >
                <use
                  xlink:href="#fi-fi"
                />
              </svg>
            </span>
            <span
              class="taglib-text-icon"
            >
              fi-FI
              <span
                class="label label-warning ml-1"
              >
                not-translated
              </span>
            </span>
          </span>
        </li>
        <li
          role="presentation"
        >
          <span
            class="dropdown-item lfr-icon-item palette-item taglib-icon"
            role="menuitem"
            tabindex="0"
            target="_self"
          >
            <span
              class="inline-item inline-item-before"
            >
              <svg
                class="lexicon-icon lexicon-icon-fr-fr"
                role="presentation"
              >
                <use
                  xlink:href="#fr-fr"
                />
              </svg>
            </span>
            <span
              class="taglib-text-icon"
            >
              fr-FR
              <span
                class="label label-warning ml-1"
              >
                not-translated
              </span>
            </span>
          </span>
        </li>
        <li
          role="presentation"
        >
          <span
            class="dropdown-item lfr-icon-item palette-item taglib-icon"
            role="menuitem"
            tabindex="0"
            target="_self"
          >
            <span
              class="inline-item inline-item-before"
            >
              <svg
                class="lexicon-icon lexicon-icon-hu-hu"
                role="presentation"
              >
                <use
                  xlink:href="#hu-hu"
                />
              </svg>
            </span>
            <span
              class="taglib-text-icon"
            >
              hu-HU
              <span
                class="label label-warning ml-1"
              >
                not-translated
              </span>
            </span>
          </span>
        </li>
        <li
          role="presentation"
        >
          <span
            class="dropdown-item lfr-icon-item palette-item taglib-icon"
            role="menuitem"
            tabindex="0"
            target="_self"
          >
            <span
              class="inline-item inline-item-before"
            >
              <svg
                class="lexicon-icon lexicon-icon-ja-jp"
                role="presentation"
              >
                <use
                  xlink:href="#ja-jp"
                />
              </svg>
            </span>
            <span
              class="taglib-text-icon"
            >
              ja-JP
              <span
                class="label label-warning ml-1"
              >
                not-translated
              </span>
            </span>
          </span>
        </li>
        <li
          role="presentation"
        >
          <span
            class="dropdown-item lfr-icon-item palette-item taglib-icon"
            role="menuitem"
            tabindex="0"
            target="_self"
          >
            <span
              class="inline-item inline-item-before"
            >
              <svg
                class="lexicon-icon lexicon-icon-nl-nl"
                role="presentation"
              >
                <use
                  xlink:href="#nl-nl"
                />
              </svg>
            </span>
            <span
              class="taglib-text-icon"
            >
              nl-NL
              <span
                class="label label-warning ml-1"
              >
                not-translated
              </span>
            </span>
          </span>
        </li>
        <li
          role="presentation"
        >
          <span
            class="dropdown-item lfr-icon-item palette-item taglib-icon"
            role="menuitem"
            tabindex="0"
            target="_self"
          >
            <span
              class="inline-item inline-item-before"
            >
              <svg
                class="lexicon-icon lexicon-icon-pt-br"
                role="presentation"
              >
                <use
                  xlink:href="#pt-br"
                />
              </svg>
            </span>
            <span
              class="taglib-text-icon"
            >
              pt-BR
              <span
                class="label label-warning ml-1"
              >
                not-translated
              </span>
            </span>
          </span>
        </li>
        <li
          role="presentation"
        >
          <span
            class="dropdown-item lfr-icon-item palette-item taglib-icon"
            role="menuitem"
            tabindex="0"
            target="_self"
          >
            <span
              class="inline-item inline-item-before"
            >
              <svg
                class="lexicon-icon lexicon-icon-sv-se"
                role="presentation"
              >
                <use
                  xlink:href="#sv-se"
                />
              </svg>
            </span>
            <span
              class="taglib-text-icon"
            >
              sv-SE
              <span
                class="label label-warning ml-1"
              >
                not-translated
              </span>
            </span>
          </span>
        </li>
        <li
          role="presentation"
        >
          <span
            class="dropdown-item lfr-icon-item palette-item taglib-icon"
            role="menuitem"
            tabindex="0"
            target="_self"
          >
            <span
              class="inline-item inline-item-before"
            >
              <svg
                class="lexicon-icon lexicon-icon-zh-cn"
                role="presentation"
              >
                <use
                  xlink:href="#zh-cn"
                />
              </svg>
            </span>
            <span
              class="taglib-text-icon"
            >
              zh-CN
              <span
                class="label label-warning ml-1"
              >
                not-translated
              </span>
            </span>
          </span>
        </li>
      </ul>
    </div>
    <div
      class="input-group-item ml-2"
    >
      <input
        aria-label=""
        class="field form-control form-control-inline language-value rounded"
        data-testid="localized-main-input"
        placeholder=""
        type="text"
        value="Testing default value"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`LocalizedInput rendering with pre-existing value renders 1`] = `
<DocumentFragment>
  <div
    class="input-group input-localized input-localized-input"
  >
    <div
      class="dropdown postion-relative lfr-icon-menu "
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="btn btn-monospaced btn-secondary dropdown-toggle"
        data-testid="localized-dropdown-button"
        role="button"
        title=""
        type="button"
      >
        <span
          class="inline-item"
        >
          <svg
            class="lexicon-icon lexicon-icon-en-us"
            role="presentation"
          >
            <use
              xlink:href="#en-us"
            />
          </svg>
        </span>
        <span
          class="btn-section"
        >
          en-US
        </span>
      </button>
    </div>
    <div
      class="input-group-item ml-2"
    >
      <input
        aria-label=""
        class="field form-control form-control-inline language-value rounded"
        data-testid="localized-main-input"
        placeholder=""
        type="text"
        value="Testing default value"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`LocalizedInput with minimal configuration renders 1`] = `
<DocumentFragment>
  <div
    class="input-group input-localized input-localized-input"
  >
    <div
      class="dropdown postion-relative lfr-icon-menu "
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="btn btn-monospaced btn-secondary dropdown-toggle"
        data-testid="localized-dropdown-button"
        role="button"
        title=""
        type="button"
      >
        <span
          class="inline-item"
        >
          <svg
            class="lexicon-icon lexicon-icon-en-us"
            role="presentation"
          >
            <use
              xlink:href="#en-us"
            />
          </svg>
        </span>
        <span
          class="btn-section"
        >
          en-US
        </span>
      </button>
    </div>
    <div
      class="input-group-item ml-2"
    >
      <input
        aria-label=""
        class="field form-control form-control-inline language-value rounded"
        data-testid="localized-main-input"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;
